# to-do-console

./: create_history.py  pyproject.toml  run.py
.specify/memory/: constitution.md
history/prompts/constitution/: 0001-project-constitution-setup.constitution.prompt.md
history/prompts/general/: 0001-fix-import-path-issues.general.prompt.md  0002-add-project-documentation.general.prompt.md
history/prompts/implementation/: 0001-implement-task-data-models.implementation.prompt.md  0002-implement-repository-layer.implementation.prompt.md  0003-implement-cli-interface.implementation.prompt.md
history/prompts/plan/: 0001-task-crud-implementation-plan.plan.prompt.md  0002-testing-strategy-plan.plan.prompt.md
history/prompts/spec/: 0001-task-crud-feature-specification.spec.prompt.md  0002-add-help-command-specification.spec.prompt.md
history/prompts/tasks/: 0001-task-crud-implementation-tasks.tasks.prompt.md
specs/: architecture.md  constitution.md  plan.md  specification.md  tasks.md
specs/api/: rest-endpoints.md
specs/constitution/: constitution.md
specs/features/: authentication.md  task-crud.md
specs/phases/: phase-1-console.md  phase-2-web.md
specs/ui/: pages.md
src/: cli.py  main.py  models.py  repository.py
tests/: test_repository.py
