[project]
name = "hackathon-2-phase-1"
version = "0.1.0"
description = "In-Memory Python Console App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
]
